Sets background-size for final homepage image to cover, fixes whitespace issue

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -66,7 +66,7 @@
   }
   .hk {
     background-image: url("hk.jpg");
-    background-size: 100%;
+    background-size: cover;
     height: 680px;
   }
   .diff-space{
@@ -125,8 +125,6 @@
     color: $deep-purple;
     font-weight: bold;
   }
-
-  
 
 
 
